--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,9 @@
   --rdp-background-color: #93d9e2;
 }
 
+html,
 body {
-  @apply flex flex-col min-h-screen;
+  @apply flex flex-col h-full;
 }
 
 .rdp-day_selected {
